2010-10-29  Patrick Gansterer  <paroga@webkit.org>

Reviewed by Adam Roben.

        Cleanup createGlobalImageFileDescriptor in ClipboardWin
        https://bugs.webkit.org/show_bug.cgi?id=48189

        * platform/win/ClipboardWin.cpp:
        (WebCore::createGlobalURLContent):
        (WebCore::createGlobalUrlFileDescriptor):
        (WebCore::ClipboardWin::writeURL):

Canonical link: https://commits.webkit.org/61418@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70914 268f45cc-cd09-0410-ab3c-d52691b4dbfc